--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ canvas{
 
 .background-image{
     width: 100%;
-    background-image: url('/PedXing.jpg');
+    background-image: url('./PedXing.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
